<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text"
            android:background="#ffff00"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:gravity="center"
            >

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/name"
                android:hint="@string/edittext1"
                android:singleLine="true"
                android:inputType="textPersonName">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edittext2"
                android:id="@+id/password"
                android:singleLine="true"
                android:inputType="textPassword"
                >

            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Cancel"
                android:text="@string/cancel"
                >

            </Button>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Signin"
                android:text="@string/signin"
                >

            </Button>
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>